; ModuleID = '/home/carl/AnghaBench/openssl/crypto/ocsp/extr_ocsp_ext.c_OCSP_copy_nonce.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/ocsp/extr_ocsp_ext.c_OCSP_copy_nonce.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NID_id_pkix_OCSP_Nonce = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @OCSP_copy_nonce(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = load i32, i32* @NID_id_pkix_OCSP_Nonce, align 4
  %10 = call i32 @OCSP_REQUEST_get_ext_by_NID(i32* %8, i32 %9, i32 -1)
  store i32 %10, i32* %7, align 4
  %11 = load i32, i32* %7, align 4
  %12 = icmp slt i32 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %2
  store i32 2, i32* %3, align 4
  br label %21

14:                                               ; preds = %2
  %15 = load i32*, i32** %5, align 8
  %16 = load i32, i32* %7, align 4
  %17 = call i32* @OCSP_REQUEST_get_ext(i32* %15, i32 %16)
  store i32* %17, i32** %6, align 8
  %18 = load i32*, i32** %4, align 8
  %19 = load i32*, i32** %6, align 8
  %20 = call i32 @OCSP_BASICRESP_add_ext(i32* %18, i32* %19, i32 -1)
  store i32 %20, i32* %3, align 4
  br label %21

21:                                               ; preds = %14, %13
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local i32 @OCSP_REQUEST_get_ext_by_NID(i32*, i32, i32) #1

declare dso_local i32* @OCSP_REQUEST_get_ext(i32*, i32) #1

declare dso_local i32 @OCSP_BASICRESP_add_ext(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
